--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -7,6 +7,10 @@
     font: inherit;
     font-size: 100%;
 }*/
+html {
+  
+}
+
 
 body {
   display: block;;
@@ -24,7 +28,7 @@ background: #000000;
 padding: 5px;
 }
 
-#center {
+#content {
   display:block;
 }
 #taskEntry #newTaskForm {
@@ -35,7 +39,7 @@ padding: 5px;
 }
 
 
-.menu {
+#hamburger {
   width: 35px;
   height: 5px;
   background-color: #000000;
