--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -8,29 +8,133 @@
     font-size: 100%;
 }*/
 html {
-  
+  overflow-y: scroll;
 }
 
-
+/*basic body*/
 body {
-  display: block;;
-  margin: 2px;
-  padding: 2px;
-
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: Arial;
+  font-size: 18px;
+  background-color: #F5F5DC;
 }
 
-h1, h2, h3, h4 {
-  margin: 2px;
-  text-align: center;
-	color: purple;
-	font-weight: bold;
-background: #000000;
-padding: 5px;
+/*Header-relative to z-index; 1 keeps always-on-top*/
+header {
+  /*background-color: #3b5998;*/
+  background-color: #006400;
+  padding: 10px;
+  text-decoration: none;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
+/*background-color covers the menu, position absolute set to cover who;e viewport*/
 #content {
-  display:block;
+  background-color: #FFFFFF;
+  padding: 52px 10px 10px 10px;
+  position: relative;
+  width: auto;
+  height: 100%;
+  -webkit-box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
 }
+
+/*hamburger with gradient effect added*/
+#hamburger {
+  /*border: 1px solid #374c77;*/
+  border: 1px solid #6456b7;
+  border-radius: 3px 3px 3px 3px;
+  cursor: pointer;
+  display: block;
+  height: 24px;
+  padding: 3px 4px 3px;
+  position: relative;
+  width: 25px;
+  /*background: #4569b2;*/
+  background: #6456b7;
+  background: -moz-linear-gradient(top, #4569b2 0%, #4062a5 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4569b2), color-stop(100%, #4062a5));
+  background: -webkit-linear-gradient(top, #4569b2 0%, #4062a5 100%);
+  background: -o-linear-gradient(top, #4569b2 0%, #4062a5 100%);
+  background: -ms-linear-gradient(top, #4569b2 0%, #4062a5 100%);
+  background: linear-gradient(to bottom, #4569b2 0%, #4062a5 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4569b2', endColorstr='#4062a5', GradientType=0);
+  }
+
+/*the white stripes*/
+#hamburger div {
+  background-color: #fff;
+  border: 1px solid #eee;
+  border-radius: 2px 2px 2px 2px;
+  height: 2px;
+  margin-top: 3px;
+  width: 90%;
+}
+
+/*background nav container*/
+nav {
+  opacity: 0;
+  left: 0;
+  top: 0;
+  position: fixed;
+  z-index: 0;
+  width: 70%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background: #3e3c3d;
+  background: -moz-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3e3c3d), color-stop(100%, #2d2c2d));
+  background: -webkit-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
+  background: -o-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
+  background: -ms-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
+  background: linear-gradient(to bottom, #3e3c3d 0%, #2d2c2d 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e3c3d', endColorstr='#2d2c2d', GradientType=0);
+}
+
+/*nav menu style*/
+nav ul {
+  list-style: none;
+  margin: 0;
+  width: 100%;
+  padding: 0;
+}
+
+nav li {
+  position: relative;
+  font-size: 1em;
+  font-weight: bold;
+  border-bottom: 1px solid #222222;
+  border-top: 1px solid #444444;
+  padding: 15px;
+}
+
+nav li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+/*layed-over content layer rendering unclickable content*/
+#contentLayer {
+  display: none;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30%;
+  z-index: 5;
+}
+
 #taskEntry #newTaskForm {
   margin: auto;
   width: 95%;
@@ -39,19 +143,6 @@ padding: 5px;
 }
 
 
-#hamburger {
-  width: 35px;
-  height: 5px;
-  background-color: #000000;
-  margin: 6px 0;
-} /*https://www.w3schools.com/howto/howto_css_menu_icon.asp*/
-
-#folders {
-  /*float: left;*/
-  width: 150px;
-  border: 3px solid black;
-  padding: 10px;
-}
 #enterNewTask {
   width: 75%;
   height: 30px;
@@ -62,109 +153,13 @@ padding: 5px;
   height: 50px;
 }
 
+/*#folders {
+  float: left;
+  width: 150px;
+  border: 3px solid black;
+  padding: 10px;
+}*/
 
-
-
-
-
-/* NOTE: Black Hover Menus */
-                              /* NOTE: Black Hover Menus */
-                                                            /* NOTE: Black Hover Menus */
-/*h1, h2, h3, h4 {
-	color: white;
-	font-weight: bold;
-background: #000000;
-padding: 15
- }
- *{
-   box-sizing: border-box;
- }
- body{
-   height:100%;
-   background-color: #444;
- }
- h1{
-   font-size:1em;
-   text-align:center;
-   color: #eee;
-   letter-spacing:1px;
-   text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
- }
- .nav-container{
-   width:300px;
-   margin-top:10px;
-   box-shadow: 0 2px 2px 2px black;
-   transition: all 0.3s linear;
- }
- .nav{
-   list-style-type:none;
-   margin:0;
-   padding:0;
- }
- li{
-   height:50px;
-   position:relative;
-   background: linear-gradient(#292929, #242424);
- }
- a {
-   border-top: 1px solid rgba(255,255,255,0.1);
-   border-bottom: 1px solid black;
-   text-decoration:none;
-   display:block;
-   height:100%;
-   width:100%;
-   line-height:50px;
-   color:#bbb;
-   text-transform: uppercase;
-   font-weight: bold;
-   padding-left:25%;
-   border-left:5px solid transparent;
-   letter-spacing:1px;
-   transition: all 0.3s linear;
- }
- .active a{
-   color: #B93632;
-   border-left:5px solid #B93632;
-   background-color: #1B1B1B;
-   outline:0;
- }
- li:not(.active):hover a{
-   color: #eee;
-   border-left: 5px solid #FCFCFC;
-   background-color: #1B1B1B;
- }
- span[class ^= "icon"]{
-   position:absolute;
-   left:20px;
-   font-size: 1.5em;
-   transition: all 0.3s linear;
- }
-
- @media only screen and (max-width : 860px){
-
-   .text{
-     display:none;
-   }
-
-   .nav-container , a{
-     width: 70px;
-
-   }
-
-   a:hover{
-     width:200px;
-     z-index:1;
-     border-top: 1px solid rgba(255,255,255,0.1);
-     border-bottom: 1px solid black;
-     box-shadow: 0 0 1px 1px black;
-   }
-
-   a:hover  .text {
-     display:block;
-     padding-left:30%;
-   }
- }*/
- /*@media only screen and (max-width : 480px){
-   .nav-container, a{ width:50px;}
-   span[class ^= "icon"]{ left:8px;}
- }*/
+/*https://www.w3schools.com/howto/howto_css_menu_icon.asp*/
+/*https://github.com/PCSailor/mobile-menu-hamburger/blob/master/css/hamburger.css*/
+/*http://www.cssmatic.com/box-shadow*/
