--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -20,6 +20,9 @@ body {
   font-size: 18px;
   background-color: #F5F5DC;
 }
+/*#tasks_active {
+  background-color: #F5F5DC;
+}*/
 
 /*Header-relative to z-index; 1 keeps always-on-top*/
 header {
@@ -35,7 +38,7 @@ header {
 
 /*background-color covers the menu, position absolute set to cover who;e viewport*/
 #content {
-  background-color: #FFFFFF;
+  background-color: #bdb76b;
   /*padding: 52px 10px 10px 10px;*/
   padding: 10px 10px 10px 10px;
   position: relative;
@@ -139,7 +142,7 @@ nav li a {
 #taskEntry #newTaskForm {
   margin: auto;
   width: 95%;
-  border: 3px solid black;
+  border: 1px solid #006400;
   padding: 10px;
 }
 
